--- a/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
+++ b/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
@@ -4438,8 +4438,10 @@ textarea.form-control-lg {
 }
 .accordion-button:not(.collapsed) {
   color: #0c63e4;
-  background-color: #e7f1ff;
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.16rem rgba(13, 110, 253, 0.25);
+}
 }
 .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
@@ -4458,17 +4460,22 @@ textarea.form-control-lg {
 }
 @media (prefers-reduced-motion: reduce) {
   .accordion-button::after {
-    transition: none;
+    transition:  ease-in-out;
   }
 }
 .accordion-button:hover {
-  z-index: 2;
+    /*z-index: 2;*/
+    background: #EAF2F5;
+    z-index: 3;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.16rem rgba(13, 110, 253, 0.25);
 }
 .accordion-button:focus {
   z-index: 3;
   border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.16rem rgba(13, 110, 253, 0.25);
 }
 
 .accordion-header {
@@ -10871,5 +10878,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
+
 
 /*# sourceMappingURL=bootstrap.css.map */
