--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -33,83 +33,84 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 lh-sm p-1 shadow">
-            <div class="container-fluid bg-transparent">
-                <a class="navbar-brand text-decoration-none text-white" href="#Index">RubyMine</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between pr-0">
-                    <div class="row w-100 ml-0 mr-0">
-                        @{ if (aleradyLogin) {
-                                <div class="col">
-                                    <ul class="navbar-nav flex-grow-1">
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Equals("/")" asp-area="" asp-page="/Index" title="">个人工作台</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Products")" asp-area="" asp-page="/Products/Index">公司产品</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Requirements")" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Plans")" asp-area="" asp-page="/Plans/Index">研发管理</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Clocks")" asp-area="" asp-page="/Clocks/Index">工时统计</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Creation")" asp-area="" asp-page="/Creation/Index">新产品研发</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Versions")" asp-area="" asp-page="/Versions/Index">版本管理</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Leaks")" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Wiki")" asp-area="" asp-page="/Wiki/Index">Wiki</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Documents")" asp-area="" asp-page="/Documents/Index">文档附件</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Helps")" asp-area="" asp-page="/Helps/Index">使用帮助</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Privacy")" asp-area="" asp-page="/Privacy">Privacy</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-1 d-flex align-content-end text-right justify-content-end mr-0 pr-0">
-                                    <ul class="navbar-nav">
-                                        <li class="nav-item">
-                                            <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Management/About"><i class="bi bi-gear"></i>&nbsp;设置</a>
-                                        </li>
-                                    </ul>
-                                </div>
+    @if (ViewData["showTitle"] == null || string.IsNullOrEmpty(ViewData["showTitle"].ToString())) {
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 lh-sm p-1 shadow">
+                <div class="container-fluid bg-transparent">
+                    <a class="navbar-brand text-decoration-none text-white" href="#Index">RubyMine</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between pr-0">
+                        <div class="row w-100 ml-0 mr-0">
+                            @{ if (aleradyLogin) {
+                                    <div class="col">
+                                        <ul class="navbar-nav flex-grow-1">
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Equals("/")" asp-area="" asp-page="/Index" title="">个人工作台</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Products")" asp-area="" asp-page="/Products/Index">所有产品</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Requirements")" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Plans")" asp-area="" asp-page="/Plans/Index">开发管理</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Versions")" asp-area="" asp-page="/Versions/Index">版本管理</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Clocks")" asp-area="" asp-page="/Clocks/Index">工时统计</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Creation")" asp-area="" asp-page="/Creation/Index">新产品研发</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Leaks")" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Wiki")" asp-area="" asp-page="/Wiki/Index">Wiki</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Documents")" asp-area="" asp-page="/Documents/Index">文档附件</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Helps")" asp-area="" asp-page="/Helps/Index">使用帮助</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Privacy")" asp-area="" asp-page="/Privacy">Privacy</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-1 d-flex align-content-end text-right justify-content-end mr-0 pr-0">
+                                        <ul class="navbar-nav">
+                                            <li class="nav-item">
+                                                <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Management/About"><i class="bi bi-gear"></i>&nbsp;设置</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                }
                             }
-                        }
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>}
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted lh-middle">
-        <div class="container-fluid text-center p-1 fs-7">
-            RubyMine @@ Powered by Jack Sparrow - <a asp-area="" asp-page="/Privacy">Privacy</a> &nbsp;四川劳吉克信息技术有限公司
-        </div>
-    </footer>
-
+    @if (ViewData["showTitle"] == null || string.IsNullOrEmpty(ViewData["showTitle"].ToString())) {
+        <footer class="border-top footer text-muted lh-middle">
+            <div class="container-fluid text-center p-1 fs-7">
+                RubyMine @@ Powered by Jack Sparrow - <a asp-area="" asp-page="/Privacy">Privacy</a> &nbsp;四川劳吉克信息技术有限公司
+            </div>
+        </footer>
+    }
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
